--- a/born2beroot-debian-setup.yml
+++ b/born2beroot-debian-setup.yml
@@ -162,7 +162,8 @@
 
     - name: 'Bonus #1 : Edit /etc/fstab to add new filesystems informations'
       ansible.builtin.lineinfile:
-        cmd: "/dev/debian-vg/{{ item.key }} {{ item.value }} ext4 defaults 0 2"
+        path: /etc/fstab
+        line: "/dev/debian-vg/{{ item.key }} {{ item.value }} ext4 defaults 0 2"
         backup: yes
       with_items:
         - { key: 'var', value: '/var' }
