--- a/born2beroot-debian-setup.yml
+++ b/born2beroot-debian-setup.yml
@@ -178,10 +178,10 @@
         recurse: yes
         mode: '0755'
       with_items:
-        - '/var/'
-        - '/srv/'
-        - '/tmp/'
-        - '/var/log/'
+        - '/var'
+        - '/srv'
+        - '/tmp'
+        - '/var/log'
 
     - name: 'Bonus #1 : Mount all filesystems'
       ansible.builtin.command:
