--- a/born2beroot-debian-setup.yml
+++ b/born2beroot-debian-setup.yml
@@ -182,8 +182,9 @@
 
     - name: 'Bonus #1 : Create var-log mounting point'
       ansible.builtin.file:
-        path: "/var/log"
+        path: /var/log
         state: directory
+        recurse: yes
 
     - name: 'Bonus #1 : Mount all filesystems'
       ansible.builtin.command:
