--- a/born2beroot-debian-setup.yml
+++ b/born2beroot-debian-setup.yml
@@ -181,10 +181,8 @@
         - 'tmp'
 
     - name: 'Bonus #1 : Create var-log mounting point'
-      ansible.builtin.file:
-        path: /var/log
-        state: directory
-        recurse: yes
+      ansible.builtin.command:
+        cmd: '/usr/bin/mkdir -p /var/log'
 
     - name: 'Bonus #1 : Mount all filesystems'
       ansible.builtin.command:
