--- a/born2beroot-debian-setup.yml
+++ b/born2beroot-debian-setup.yml
@@ -221,6 +221,68 @@
         - '/srv'
         - '/tmp'
         
+    - name: 'Bonus #2 : Install lighttpd package'
+      ansible.builtin.apt:
+        name: lighttpd
+
+    - name: 'Bonus #2 : Start and enable lighttpd service'
+      ansible.builtin.service:
+        state: started
+        enabled: yes
+        name: lighttpd
+
+    - name: 'Bonus #2 : Install mariadb-server package'
+      ansible.builtin.apt:
+        name: mariadb-server
+
+    - name: 'Bonus #2 : Start and enable mysql service'
+      ansible.builtin.service:
+        state: started
+        enabled: yes
+        name: mysql
+
+    - name: 'Bonus #2 : Secure MariaDB installation'
+      ansible.builtin.expect:
+        command: '/usr/bin/mysql_secure_installation'
+        responses:
+          'Enter current password for root (enter for none): ': 'root'
+          'Switch to unix_socket authentication [Y/n] ': 'n'
+          'Change the root password? [Y/n] ': 'n'
+          'Remove anonymous users? [Y/n] ': 'Y'
+          'Disallow root login remotely ? [Y/n] ': 'Y'
+          'Remove test database and access to it? [Y/n] ': 'Y'
+          'Reload privilege tables now? [Y/n] ': 'Y'
+
+    - name: 'Bonus #2 : Restart mysql service'
+      ansible.builtin.service:
+        name: mysql
+        state: restarted
+
+    - name: 'Bonus #2 : Create new database and user for WordPress'
+      ansible.builtin.command:
+        cmd: "{{ item }}"
+      loop:
+        - "/usr/bin/mysql -e 'CREATE DATABASE wordpress;'"
+        - "/usr/bin/mysql -e \"GRANT ALL PRIVILEGES on wordpress.* TO 'wordpress_user'@'localhost' IDENTIFIED BY 'wordpress_pss123';\""
+        - "/usr/bin/mysql -e 'FLUSH PRIVILEGES;'"
+
+    - name: 'Bonus #2 : Install php7.3 php7.3-fpm php7.3-mysql php7.3-cli php7.3-curl php7.3-xml php-json php-zip php-mbstring php-gd php-intl and php-cgi packages'
+      ansible.builtin.apt:
+        name: "{{ item }}"
+      loop:
+        - 'php7.3'
+        - 'php7.3-fpm'
+        - 'php7.3-mysql'
+        - 'php7.3-cli'
+        - 'php7.3-curl'
+        - 'php7.3-xml'
+        - 'php-json'
+        - 'php-zip'
+        - 'php-mbstring'
+        - 'php-gd'
+        - 'php-intl'
+        - 'php-cgi'
+
     - name: 'Remove useless packages from the cache'
       ansible.builtin.apt:
         autoclean: yes
