--- a/born2beroot-debian-setup.yml
+++ b/born2beroot-debian-setup.yml
@@ -238,14 +238,15 @@
     - name: 'Bonus #2 : Secure MariaDB installation'
       ansible.builtin.expect:
         command: '/usr/bin/mysql_secure_installation'
+        echo: yes
         responses:
-          'Enter current password for root \(enter for none\): ': 'root'
-          'Switch to unix_socket authentication [Y/n] ': 'n'
-          'Change the root password? [Y/n] ': 'n'
-          'Remove anonymous users? [Y/n] ': 'Y'
-          'Disallow root login remotely ? [Y/n] ': 'Y'
-          'Remove test database and access to it? [Y/n] ': 'Y'
-          'Reload privilege tables now? [Y/n] ': 'Y'
+          'Enter current password for root \(enter for none\):': 'root'
+          'Switch to unix_socket authentication [Y/n]': 'n'
+          'Change the root password? [Y/n]': 'n'
+          'Remove anonymous users? [Y/n]': 'Y'
+          'Disallow root login remotely ? [Y/n]': 'Y'
+          'Remove test database and access to it? [Y/n]': 'Y'
+          'Reload privilege tables now? [Y/n]': 'Y'
 
     - name: 'Bonus #2 : Restart mysql service'
       ansible.builtin.service:
