--- a/born2beroot-debian-setup.yml
+++ b/born2beroot-debian-setup.yml
@@ -247,6 +247,7 @@
           'Disallow root login remotely ? [Y/n]': 'Y'
           'Remove test database and access to it? [Y/n]': 'Y'
           'Reload privilege tables now? [Y/n]': 'Y'
+        timeout: 1
 
     - name: 'Bonus #2 : Restart mysql service'
       ansible.builtin.service:
