--- a/born2beroot-debian-setup.yml
+++ b/born2beroot-debian-setup.yml
@@ -7,7 +7,7 @@
   become: yes
   tasks:
 
-    - name: 'Update all packages to their latest version'
+    - name: 'Update installed packages'
       ansible.builtin.apt:
         name: "*"
         state: latest
